# vshdw

./: Cargo.toml  README.ja.md  README.md  vshdw.example.toml
scripts/: create-dmg.sh  notarize-executable.sh  sign-executable.sh
src/: main.rs
